tests/mm0_mmu/fail/bad-sort1.mm0
-- pure modifier not first 
strict pure sort s3;